# cloud-guest

./: .env.example  .gitignore  AUTH_FLOW.md  FINAL_PUSH_INSTRUCTIONS.md  FOLDER_STRUCTURE.txt  GITHUB_PUSH_SUMMARY.txt  GIT_COMMIT.txt  MODULE_003_DELIVERABLES.md  PUSH_TO_GITHUB.md  README_AUTH.md  auth_service.py  cloudguest_auth_module.md  index.html  jwt_handler.py  metadata.json  migration_003.py  models.py  package.json  password_hasher.py  push_to_github.sh  repositories.py  routes.py  schemas.py  security_service.py  server.ts  test_auth.py  tsconfig.json  vite.config.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_auth_tables.py  0002_create_rbac_tables.py  0003_create_organization_tables.py  0004_add_organization_fk_to_rbac_tables.py  0005_create_location_tables.py  0006_add_location_fk_to_rbac_tables.py  0007_create_router_tables.py  0008_add_router_fk_to_rbac_tables.py  0009_create_billing_and_branding_tables.py  0009_create_router_provisioning_tables.py  0010_create_monitoring_and_analytics_tables.py  0010_create_router_agent_tables.py  0011_create_wireguard_tables.py  0012_create_otp_tables.py  0013_create_voucher_tables.py  0014_create_captive_portal_tables.py  0015_create_guest_tables.py  0016_create_monitoring_tables.py  (+45 more)
backend/app/: __init__.py  main.py
backend/docs/: API.md  ARCHITECTURE_DESIGN.md
backend/scripts/: run_api.sh  seed.py
backend/tests/: __init__.py
(+861 files in other folders)
