[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudguest-backend"
version = "0.1.0"
description = "CloudGuest backend foundation for a cloud-managed MikroTik network operating system."
requires-python = ">=3.13"
readme = "README.md"
authors = [{ name = "CloudGuest Engineering" }]
dependencies = [
    "alembic==1.14.0",
    "argon2-cffi==23.1.0",
    "asyncpg==0.30.0",
    "celery[redis]==5.5.3",
    "cryptography==44.0.0",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "opentelemetry-exporter-otlp-proto-http==1.44.0",
    "opentelemetry-instrumentation-fastapi==0.65b0",
    "opentelemetry-sdk==1.44.0",
    "prometheus-client==0.25.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "PyJWT==2.10.1",
    "python-dotenv==1.0.1",
    "redis==5.2.1",
    "SQLAlchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

